Fix `<th>` center and right alignment
Fix #7

--- a/src/scss/app/_content.scss
+++ b/src/scss/app/_content.scss
@@ -274,6 +274,9 @@
     th,
     td {
         padding: var(--table-cell-padding);
+    }
+
+    th:not([align]) {
         text-align: left;
     }
 
